--- a/j10/ex09/Makefile
+++ b/j10/ex09/Makefile
@@ -5,35 +5,21 @@
 #                                                     +:+ +:+         +:+      #
 #    By: jhourman <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2018/07/17 20:48:31 by jhourman          #+#    #+#              #
-#    Updated: 2018/07/22 12:56:52 by jhourman         ###   ########.fr        #
+#    Created: 2018/07/19 15:57:40 by jhourman          #+#    #+#              #
+#    Updated: 2018/07/19 16:13:27 by jhourman         ###   ########.fr        #
 #                                                                              #
 #******************************************************************************#
 
-NAME = create
+NAME = do-op
 
 CFLAGS = -Wall -Werror -Wextra
 
-SRC = $(wildcard srcs/*.c)
-
-HDS = $(wildcard includes/*.h)
-
-OBJ = *.o
-
-LIB = ft.a
+SRC = *.c
 
 all: $(NAME)
 
 $(NAME) :
-	gcc $(CFLAGS) -c $(SRC) $(HDS)
-	ar -rc lib$(LIB) $(OBJ)
-	ranlib lib$(LIB)
+	gcc $(CFLAGS) $(SRC) -o $(NAME)
 
 clean:
-	rm -f $(OBJ)
-
-fclean: clean
 	rm -f $(NAME)
-	rm -f lib$(LIB)
-
-re:	fclean all
